2 страницы соц сети с нуля

--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/3ab41684df.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/src/assets/sass/style.sass">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      
+    </div>
     <script type="module" src="/src/main.js"></script>
+    <script src="https://kit.fontawesome.com/3ab41684df.js" crossorigin="anonymous"></script>
   </body>
 </html>
